2007-04-16  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py:
	Do not set a pixbuf if the data value is None. Fixes #3310

	* kiwi/ui/objectlist.py: 
	Set the sort columnm id so the columns end up sorted. Fixes #3032

2007-04-10  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/proxywidget.py (ProxyWidgetMixin._as_string): Provide
	a default (string) converter if none is set.

2007-04-08  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/entry.py (ProxyEntry.__post_init__): Remove
	dirty idle add hack and use __post_init__ instead.

	* kiwi/utils.py (PropertyObject.__post_init__): Add a hook which is
	called after the object construction is finished.

2007-04-03  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/environ.py (Environment.add_resource): Do not append the same resource
	path twice

2007-04-02  Johan Dahlin  <jdahlin@async.com.br>

	* tests/test_Entry.py: Add a test

	* kiwi/ui/widgets/entry.py (ProxyEntry.__init__): 
	Add a workaround for http://bugzilla.gnome.org/show_bug.cgi?id=425501,
	fixes #3259

2007-03-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/environ.py (Library.__init__): Only add 
	root/lib/pythonX.Y/site-packages to sys.path if it exists.

=== 1.9.14 ===
2007-03-23  Johan Dahlin  <jdahlin@async.com.br>

	* Makefile:
	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* kiwi/__version__.py:
	Release 1.9.14

2007-03-23  Johan Dahlin  <jdahlin@async.com.br>

	* gazpacho-plugin/kiwiwidgets.xml: Re-enable the ObjectList

2006-03-23  Johan Dahlin  <jdahlin@async.com.br>

	* glade3-plugin/kiwiwidgets.py:
	* glade3-plugin/kiwiwidgets.xml:
	* glade3-plugin/setup.py:
	Add Glade-3 plugin based on patch by Ali, fixes #3239

	* kiwi/dist.py:
	Do not require a name parameter to be passed in.

2007-03-22  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/controllers.py (BaseController.on_key_press): gdk.keyval_name
	returns None if there is no name for the key, avoid raising an