@@ -1,3 +1,8 @@
+2007-04-18  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/objectlist.py (ObjectList.sort_by_attribute): 
+	Add. Fixes #3311, based on patch by Ali Afshar.
+
 2007-04-16  Ali Afshar <aafshar@gmail.com>
 
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
